# minimal-fetch-content-pfunit

./: .gitignore  README.md
broken/: CMakeLists.txt
broken/src/: square.f90
broken/test/: test_square.pf
fixed/src/: CMakeLists.txt
working/: CMakeLists.txt
working/test/: CMakeLists.txt
